[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/NormalMap/Normal Map Generator.gd" type="Script" id=1]
[ext_resource path="res://addons/NormalMap/preview.shader" type="Shader" id=2]
[ext_resource path="res://addons/NormalMap/sample.png" type="Texture" id=3]
[ext_resource path="res://addons/NormalMap/Light.png" type="Texture" id=4]
[ext_resource path="res://addons/NormalMap/distance.shader" type="Shader" id=5]
[ext_resource path="res://addons/NormalMap/normalmap.shader" type="Shader" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0131004, 0.423581, 0.921397 )
colors = PoolColorArray( 0.0392157, 0.0509804, 0.192157, 1, 0.133333, 0.133333, 0.258824, 1, 0.309804, 0.345098, 0.462745, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ViewportTexture" id=8]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/normal_preview = false
shader_param/normal_texture = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=9]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )
shader_param/emboss_height = 0.1
shader_param/bump_height = 0.64
shader_param/blur = 5
shader_param/bump = 60
shader_param/invertX = true
shader_param/invertY = true
shader_param/with_distance = true
shader_param/with_emboss = true
shader_param/distanceTex = SubResource( 9 )

[node name="Normal Map Generator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -624.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_top = 4.0
margin_right = 274.0
margin_bottom = 204.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Abrir un Archivo"
resizable = true
mode = 0

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="GUI/VBoxContainer"]
margin_right = 400.0
margin_bottom = 312.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 3
size_flags_horizontal = 15
size_flags_vertical = 15
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="GUI/VBoxContainer/ViewportContainer"]
size = Vector2( 400, 312 )
own_world = true
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="TextureRect2" type="TextureRect" parent="GUI/VBoxContainer/ViewportContainer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="GUI/VBoxContainer/ViewportContainer/Viewport"]
light_mask = 2
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Light2D" type="Light2D" parent="GUI/VBoxContainer/ViewportContainer/Viewport/TextureRect"]
position = Vector2( 127.877, 11.4031 )
texture = ExtResource( 4 )
texture_scale = 3.0
color = Color( 1, 0.984314, 0, 1 )
range_height = 30.0
range_item_cull_mask = 2

[node name="HBoxContainer_ColorPicker" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 316.0
margin_right = 400.0
margin_bottom = 336.0
alignment = 1

[node name="Label" type="Label" parent="GUI/VBoxContainer/HBoxContainer_ColorPicker"]
margin_left = 102.0
margin_top = 3.0
margin_right = 174.0
margin_bottom = 17.0
text = "Light Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="GUI/VBoxContainer/HBoxContainer_ColorPicker"]
margin_left = 178.0
margin_right = 298.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
color = Color( 1, 0.984314, 0, 1 )

[node name="TextureButton" type="Button" parent="GUI/VBoxContainer"]
margin_top = 340.0
margin_right = 400.0
margin_bottom = 360.0
text = "Texture..."

[node name="Normal" type="CheckBox" parent="GUI/VBoxContainer"]
margin_top = 364.0
margin_right = 400.0
margin_bottom = 388.0
text = "Normal Preview"

[node name="Emboss" type="CheckBox" parent="GUI/VBoxContainer"]
margin_top = 392.0
margin_right = 400.0
margin_bottom = 416.0
pressed = true
text = "Emboss:"

[node name="Emboss Height" type="HSlider" parent="GUI/VBoxContainer"]
margin_top = 420.0
margin_right = 400.0
margin_bottom = 436.0
max_value = 2.0
step = 0.01
value = 0.1
ticks_on_borders = true

[node name="Bump" type="CheckBox" parent="GUI/VBoxContainer"]
margin_top = 440.0
margin_right = 400.0
margin_bottom = 464.0
pressed = true
text = "Bump:"

[node name="Bump Height" type="HSlider" parent="GUI/VBoxContainer"]
margin_top = 468.0
margin_right = 400.0
margin_bottom = 484.0
max_value = 2.0
step = 0.01
value = 0.3
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 488.0
margin_right = 400.0
margin_bottom = 512.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "Blur:"

[node name="SpinBoxBlur" type="SpinBox" parent="GUI/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 108.0
margin_bottom = 24.0
max_value = 10.0
value = 5.0
rounded = true
suffix = "px"

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 516.0
margin_right = 400.0
margin_bottom = 540.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Distance:"

[node name="SpinBoxDistance" type="SpinBox" parent="GUI/VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 138.0
margin_bottom = 24.0
value = 60.0
rounded = true
suffix = "px"

[node name="InvertX" type="CheckBox" parent="GUI/VBoxContainer"]
margin_top = 544.0
margin_right = 400.0
margin_bottom = 568.0
pressed = true
text = "Invert X"

[node name="InvertY" type="CheckBox" parent="GUI/VBoxContainer"]
margin_top = 572.0
margin_right = 400.0
margin_bottom = 596.0
pressed = true
text = "Invert Y"

[node name="Button" type="Button" parent="GUI/VBoxContainer"]
margin_top = 600.0
margin_right = 400.0
margin_bottom = 620.0
text = "Generate"

[node name="ViewportDistance" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="Distance" type="Sprite" parent="ViewportDistance"]
material = SubResource( 5 )
position = Vector2( 128, 128 )
texture = ExtResource( 3 )

[node name="ViewportNormal" type="Viewport" parent="."]
size = Vector2( 256, 256 )
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Normal" type="Sprite" parent="ViewportNormal"]
material = SubResource( 7 )
position = Vector2( 128, 128 )
texture = ExtResource( 3 )
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="color_changed" from="GUI/VBoxContainer/HBoxContainer_ColorPicker/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="GUI/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="GUI/VBoxContainer/Normal" to="." method="_on_Normal_toggled"]
[connection signal="toggled" from="GUI/VBoxContainer/Emboss" to="." method="_on_Emboss_toggled"]
[connection signal="value_changed" from="GUI/VBoxContainer/Emboss Height" to="." method="_on_Emboss_Height_value_changed"]
[connection signal="toggled" from="GUI/VBoxContainer/Bump" to="." method="_on_Bump_toggled"]
[connection signal="value_changed" from="GUI/VBoxContainer/Bump Height" to="." method="_on_Bump_Height_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/HBoxContainer/SpinBoxBlur" to="." method="_on_SpinBoxBlur_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/HBoxContainer2/SpinBoxDistance" to="." method="_on_SpinBoxDistance_value_changed"]
[connection signal="toggled" from="GUI/VBoxContainer/InvertX" to="." method="_on_InvertX_toggled"]
[connection signal="toggled" from="GUI/VBoxContainer/InvertY" to="." method="_on_InvertY_toggled"]
[connection signal="pressed" from="GUI/VBoxContainer/Button" to="." method="_on_Button_pressed"]
